# dns-resolver-windows

./: .appveyor.yml  .gitignore  README.md  appveyor.yml  dns-resolver-windows.cabal  stack.yaml
Network/DNS/: Domains.hs
app/: Main.hs
cbits/: defaultdns.c
dns/: appveyor.yml  dns.cabal
dns/Network/DNS/: Internal.hs  Lookup.hs  Resolver.hs
dns/etc/: resolv.conf.crippled
dns/test2/: LookupSpec.hs
src/Network/DNS/: Domains.hs  Domains.hsc
test/: Main.hs
