name:                dns-resolver-windows
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/input-output-hk/dns-resolver-windows#readme
license:             BSD3
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@iohk.io
copyright:           2017 Alfredo Di Napoli & IOHK Engineering Team
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Network.DNS.Domains
  build-depends:       base
                     , dns
                     , iproute
                     , text
  default-language:    Haskell2010
  if os(windows)
     extra-libraries: iphlpapi
     c-sources: cbits/defaultdns.c
     include-dirs: include

executable dns-resolver-windows
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dns
                     , dns-resolver-windows
  default-language:    Haskell2010

test-suite dns-resolver-windows-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , dns-resolver-windows
                     , dns
                     , tasty
                     , tasty-hunit
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/input-output-hk/dns-resolver-windows
